--- a/src/css/prev-next.css
+++ b/src/css/prev-next.css
@@ -55,12 +55,6 @@
     }
 }
 
-@media (max-width: 767px) {
-    .prev-next-wrapper {
-        padding: 0 15px;
-    }
-}
-
 .prev a {
     display: flex;
     flex-direction: row;
@@ -129,3 +123,14 @@
         }
     }
 }
+
+@media (max-width: 767px) {
+    .prev-next-wrapper {
+        padding: 0 15px;
+        .prev-next-title {
+            display: none;
+        }
+    }
+    
+}
+
